--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
   <title>Gradient Export Viewer</title>
+  <link rel="stylesheet" href="styles.css">
+  <script defer src="script.js"></script>
 </head>
 <body>
-  <h1>View Exported Gradient</h1>
-  <p>Enter your Bin ID:</p>
-  <input type="text" id="binIdInput" placeholder="e.g. 63daa..." />
-  <button id="retrieveBtn">Retrieve</button>
-  <pre id="output"></pre>
-
-  <script src="script.js"></script>
+  <div class="main-container">
+    <h1 class="fade-in">View Exported Gradient</h1>
+    <p class="fade-in">Enter your Bin ID:</p>
+    <input type="text" id="binIdInput" class="fade-in" placeholder="e.g. 63daa..." />
+    <button id="retrieveBtn" class="fancy-btn fade-in">Retrieve</button>
+    <pre id="output" class="fade-in hidden"></pre>
+  </div>
 </body>
 </html>
