--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <input type="text" id="binIdInput" placeholder="e.g. 63daa..." />
     <button id="retrieveBtn" class="fancy-btn">Retrieve</button>
 
-    <!-- Main status/error message box -->
+    <!-- Shows status or error messages -->
     <div id="messageBox" class="message-box hidden">
       <pre id="output"></pre>
     </div>
 
-    <!-- "Is this you?" prompt container -->
+    <!-- "Is this you?" container -->
     <div id="playerCheckContainer" class="player-check hidden">
       <p id="playerInfoP"></p>
       <p>Is this you?</p>
@@ -26,7 +26,7 @@
       <button id="noBtn" class="confirm-btn">No</button>
     </div>
 
-    <!-- Final gradient data container -->
+    <!-- Final gradient container -->
     <div id="gradientContainer" class="gradient-container hidden">
       <h2>Gradient Data</h2>
       <pre id="gradientOutput"></pre>
