--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <title>Gradient Export Viewer</title>
   <link rel="stylesheet" href="styles.css" />
-  <script defer src="script.js"></script>
+  <script defer src="ScriptV2.js"></script>
 </head>
 <body>
   <div class="main-container">
