--- a/index.html
+++ b/index.html
@@ -1,33 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8"/>
   <title>Gradient Export Viewer</title>
   <link rel="stylesheet" href="styles.css" />
-  <script defer src="ScriptV2.js"></script>
 </head>
 <body>
+  <div class="bg-animations"></div>
+
   <div class="main-container">
-    <h1>View Exported Gradient</h1>
-    <p>Enter your Bin ID:</p>
-    <input type="text" id="binIdInput" placeholder="e.g. 63daa..." />
-    <button id="retrieveBtn" class="fancy-btn">Retrieve</button>
+    <h1 class="fade-in">Gradient Export Viewer</h1>
+    <p class="subtitle fade-in">Entrez l'ID de votre bin pour récupérer vos données de gradient.</p>
 
-    <!-- Shows status or error messages -->
-    <div id="messageBox" class="message-box hidden">
-      <pre id="output"></pre>
+    <div class="input-row fade-in">
+      <input type="text" id="binIdInput" placeholder="Ex: 63daa..." />
+      <button id="retrieveBtn" class="btn retrieve-btn">Récupérer</button>
     </div>
 
-    <!-- "Is this you?" container -->
+    <!-- Boîte de notification (cacher/afficher via JS) -->
+    <div id="notificationBox" class="notification hidden">
+      <p id="notificationText">Message de notification ou chargement...</p>
+    </div>
+
+    <!-- Section "Is this you ?" -->
     <div id="playerCheckContainer" class="player-check hidden">
-      <p id="playerInfoP"></p>
-      <p>Is this you?</p>
-      <button id="yesBtn" class="confirm-btn">Yes</button>
-      <button id="noBtn" class="confirm-btn">No</button>
+      <p class="player-info">
+        Nom : <span id="playerNameSpan" class="player-name">PseudoIci</span><br/>
+        ID : <span id="playerIdSpan" class="player-id">1234567</span>
+      </p>
+      <p class="question">Est-ce bien toi&nbsp;?</p>
+      <div class="confirm-buttons">
+        <button id="yesBtn" class="btn confirm-btn">Oui</button>
+        <button id="noBtn" class="btn confirm-btn">Non</button>
+      </div>
     </div>
 
-    <!-- Final gradient container -->
-    <div id="gradientContainer" class="gradient-container hidden">
+    <!-- Conteneur final avec le gradient data -->
+    <div id="gradientContainer" class="gradient-data hidden">
       <h2>Gradient Data</h2>
       <pre id="gradientOutput"></pre>
     </div>
