--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8"/>
   <title>Gradient Export Viewer</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
+  <script defer src="script.js"></script>
 </head>
 <body>
   <div class="bg-animations"></div>
@@ -17,25 +18,25 @@
       <button id="retrieveBtn" class="btn retrieve-btn">Récupérer</button>
     </div>
 
-    <!-- Boîte de notification (cacher/afficher via JS) -->
+    <!-- Boîte de notification -->
     <div id="notificationBox" class="notification hidden">
       <p id="notificationText">Message de notification ou chargement...</p>
     </div>
 
-    <!-- Section "Is this you ?" -->
+    <!-- "Is this you?" -->
     <div id="playerCheckContainer" class="player-check hidden">
       <p class="player-info">
         Nom : <span id="playerNameSpan" class="player-name">PseudoIci</span><br/>
         ID : <span id="playerIdSpan" class="player-id">1234567</span>
       </p>
-      <p class="question">Est-ce bien toi&nbsp;?</p>
+      <p class="question">Est-ce bien toi ?</p>
       <div class="confirm-buttons">
         <button id="yesBtn" class="btn confirm-btn">Oui</button>
         <button id="noBtn" class="btn confirm-btn">Non</button>
       </div>
     </div>
 
-    <!-- Conteneur final avec le gradient data -->
+    <!-- Conteneur final : gradient data -->
     <div id="gradientContainer" class="gradient-data hidden">
       <h2>Gradient Data</h2>
       <pre id="gradientOutput"></pre>
