--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="utf-8"/>
   <title>Gradient Export Viewer</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -11,32 +11,29 @@
 
   <div class="main-container">
     <h1 class="fade-in">Gradient Export Viewer</h1>
-    <p class="subtitle fade-in">Entrez l'ID de votre bin pour récupérer vos données de gradient.</p>
+    <p class="subtitle fade-in">Enter your Bin ID to retrieve your gradient data.</p>
 
     <div class="input-row fade-in">
-      <input type="text" id="binIdInput" placeholder="Ex: 63daa..." />
-      <button id="retrieveBtn" class="btn retrieve-btn">Récupérer</button>
+      <input type="text" id="binIdInput" placeholder="e.g. 63daa..." />
+      <button id="retrieveBtn" class="btn retrieve-btn">Retrieve</button>
     </div>
 
-    <!-- Boîte de notification -->
-    <div id="notificationBox" class="notification hidden">
-      <p id="notificationText">Message de notification ou chargement...</p>
+    <!-- A box to show success/loading/error messages -->
+    <div id="messageBox" class="notification hidden">
+      <pre id="output"></pre>
     </div>
 
-    <!-- "Is this you?" -->
+    <!-- "Is this you?" container -->
     <div id="playerCheckContainer" class="player-check hidden">
-      <p class="player-info">
-        Nom : <span id="playerNameSpan" class="player-name">PseudoIci</span><br/>
-        ID : <span id="playerIdSpan" class="player-id">1234567</span>
-      </p>
-      <p class="question">Est-ce bien toi ?</p>
+      <p id="playerInfoP" class="player-info"></p>
+      <p class="question">Is this you?</p>
       <div class="confirm-buttons">
-        <button id="yesBtn" class="btn confirm-btn">Oui</button>
-        <button id="noBtn" class="btn confirm-btn">Non</button>
+        <button id="yesBtn" class="btn confirm-btn">Yes</button>
+        <button id="noBtn" class="btn confirm-btn">No</button>
       </div>
     </div>
 
-    <!-- Conteneur final : gradient data -->
+    <!-- Final gradient data container -->
     <div id="gradientContainer" class="gradient-data hidden">
       <h2>Gradient Data</h2>
       <pre id="gradientOutput"></pre>
