--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Final gradient data container -->
     <div id="gradientContainer" class="gradient-data hidden">
       <h2>Gradient Data</h2>
-      <pre id="gradientOutput"></pre>
+      <pre id="gradientOutput" class="pretty-box"></pre>
     </div>
   </div>
 </body>
