--- a/index.html
+++ b/index.html
@@ -3,29 +3,25 @@
 <head>
   <meta charset="utf-8"/>
   <title>Gradient Export Viewer</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
   <script defer src="script.js"></script>
 </head>
 <body>
-  <!-- Our animated gradient background -->
   <div class="bg-animations"></div>
 
   <div class="main-container">
     <h1 class="fade-in">Gradient Export Viewer</h1>
     <p class="subtitle fade-in">Enter your Bin ID to retrieve your gradient data.</p>
 
-    <!-- Input + button row -->
     <div class="input-row fade-in">
       <input type="text" id="binIdInput" placeholder="e.g. 63daa..." />
       <button id="retrieveBtn" class="btn retrieve-btn">Retrieve</button>
     </div>
 
-    <!-- Notification box -->
     <div id="messageBox" class="notification hidden">
       <pre id="output"></pre>
     </div>
 
-    <!-- "Is this you?" container -->
     <div id="playerCheckContainer" class="player-check hidden">
       <p id="playerInfoP" class="player-info"></p>
       <p class="question">Is this you?</p>
@@ -35,10 +31,11 @@
       </div>
     </div>
 
-    <!-- Final gradient data container with a <pre> -->
+    <!-- We add a "Copy Data" button next to the final data -->
     <div id="gradientContainer" class="gradient-container hidden">
       <h2>Gradient Data</h2>
       <pre id="gradientOutput"></pre>
+      <button id="copyBtn" class="btn copy-btn hidden">Copy Data</button>
     </div>
   </div>
 </body>
