--- a/index.html
+++ b/index.html
@@ -1,42 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>Gradient Export Viewer</title>
-  <link rel="stylesheet" href="styles.css">
-  <script defer src="script.js"></script>
+  <meta charset="utf-8" />
+  <title>Ro-Gradient</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="bg-animations"></div>
 
-  <div class="main-container">
-    <h1 class="fade-in">Gradient Export Viewer</h1>
-    <p class="subtitle fade-in">Enter your Bin ID to retrieve your gradient data.</p>
+  <header>
+    <h1>Ro-Gradient</h1>
+  </header>
 
-    <div class="input-row fade-in">
-      <input type="text" id="binIdInput" placeholder="e.g. 63daa..." />
-      <button id="retrieveBtn" class="btn retrieve-btn">Retrieve</button>
-    </div>
+  <main>
+    <section id="binSection">
+      <label for="binIdInput">Gradient ID&nbsp;:</label>
+      <input type="text" id="binIdInput" placeholder="Ex: 63daa..." />
+      <button id="retrieveBtn">Retrieve</button>
+    </section>
 
-    <div id="messageBox" class="notification hidden">
-      <pre id="output"></pre>
-    </div>
+    <section id="resultSection" class="hidden">
+      <div id="infoMessage"></div>
+      <!-- Conteneur où on affiche le(s) gradient(s) -->
+      <div id="visualContainer"></div>
+      <!-- Bouton pour télécharger la “version JSON structurée” -->
+      <button id="downloadBtn" class="hidden">Download Gradient</button>
+    </section>
+  </main>
 
-    <div id="playerCheckContainer" class="player-check hidden">
-      <p id="playerInfoP" class="player-info"></p>
-      <p class="question">Is this you?</p>
-      <div class="confirm-buttons">
-        <button id="yesBtn" class="btn confirm-btn">Yes</button>
-        <button id="noBtn" class="btn confirm-btn">No</button>
-      </div>
-    </div>
-
-    <!-- We add a "Copy Data" button next to the final data -->
-    <div id="gradientContainer" class="gradient-container hidden">
-      <h2>Gradient Data</h2>
-      <pre id="gradientOutput"></pre>
-      <button id="copyBtn" class="btn copy-btn hidden">Copy Data</button>
-    </div>
-  </div>
+    <footer>
+    <!-- Nouveau bouton redirigeant vers https://status.jsonbin.io/ -->
+    <button id="apiStatusBtn">API Status Page</button>
+  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
